--- a/public/css/app.css
+++ b/public/css/app.css
@@ -7698,4 +7698,16 @@ body {
   padding: 1%;
 }
 
+.template-row {
+  position: relative;
+  border: 1px dashed #ccc;
+  padding: 20px 0 0 0;
+}
+
+.teste-button {
+  position: absolute;
+  top: 0;
+  right: 0;
+}
+
 /*# sourceMappingURL=app.css.map */
