--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -1,10 +1,7 @@
-
 // Fonts
 @import url(https://fonts.googleapis.com/css?family=Raleway:300,400,600);
-
 // Variables
 @import "variables";
-
 // Bootstrap
 @import "node_modules/bootstrap-sass/assets/stylesheets/bootstrap";
 
@@ -28,4 +25,15 @@ body {
   position: absolute;
   top: 0;
   right: 0;
+}
+
+@media (min-width: 992px) {
+  .align-button-button {
+    margin-top:26px;
+  }
+}
+@media (max-width: 992px) {
+  .align-button-button {
+    margin-top:10px;
+  }
 }
