Laravel mix + codemirror

--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -5,6 +5,9 @@
 // Bootstrap
 @import "node_modules/bootstrap-sass/assets/stylesheets/bootstrap";
 
+//@import "codemirror";
+//@import "theme/monokai";
+
 body {
   padding-top: 70px;
 }
