--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -47,6 +47,10 @@ body {
   margin-left: 0px !important;
   margin-right: 0px !important;
 }
+.row-with-margin {
+  margin-left: -15px !important;
+  margin-right: -15px !important;
+}
 .min-height-vue-directive {
   min-height: 10px;
 }
